# agl-solitaire

./: README.md  __main__.py  pyproject.toml  setup.cfg  setup.py
src/: application.py  automaton.py  grammar.py  settings.py  version.py
src/agl_solitaire/: application.py  custom.py  custom_helpers.py  experiment.py  experiment_state.py  grammar.py  gui.py  settings.py  task.py  task_state.py  utils.py  version.py
src/agl_solitaire/custom/: Huba_speedrun.py  pilot.py
tests/: test_regress.py  test_unit.py  test_unit_grammar.py  test_unit_saveload.py
