[metadata]
name = agl_solitaire
version = 0.3.0
author = Dániel Arató
author_email = nil.the.human@gmail.com
description = Terminal-based script for Artificial Grammar Learning experiments at home
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nilthehuman/agl-solitaire
keywords = one, two
license = BSD-3-Clause
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.0
